--- a/mpmf-server/views/proteomics.ejs
+++ b/mpmf-server/views/proteomics.ejs
@@ -29,6 +29,9 @@
     <div class="container-fluid" id="grid">
         
     </div>
+    <footer class="footer-charts">Supported by: Monash Proteomics and Metabolomics Platform, Monash University
+        <a href="#" target="_blank"> More Information</a>
+    </footer>
 
 </body>
 
