--- a/mpmf-server/views/proteomics.ejs
+++ b/mpmf-server/views/proteomics.ejs
@@ -30,7 +30,7 @@
         
     </div>
     <footer class="footer-charts">Supported by: Monash Proteomics and Metabolomics Platform, Monash University
-        <a href="#" target="_blank"> More Information</a>
+        <a href="#" target="_blank" data-info="main"> More Information</a>
     </footer>
 
 </body>
